--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>com.github.dionmcm</groupId>
 	<artifactId>ncts-syndication-client</artifactId>
 	<packaging>maven-plugin</packaging>
-	<version>0.0.1</version>
+	<version>0.0.1-SNAPSHOT</version>
 
 	<name>ncts-syndication-client Maven Mojo</name>
 	<description>Maven Mojo and CLI for downloading content from the National Clinical Terminology Service's syndication feed</description>
@@ -11,9 +11,8 @@
 
 	<scm>
 		<connection>scm:git:git@github.com:dionmcm/ncts-syndication-client.git</connection>
-		<url>scm:git:git@github.com:dionmcm/ncts-syndication-client.git</url>
+		<url>https://github.com/dionmcm/ncts-syndication-client.git</url>
 		<developerConnection>scm:git:git@github.com:dionmcm/ncts-syndication-client.git</developerConnection>
-    <tag>ncts-syndication-client-0.0.1</tag>
   </scm>
 
 	<distributionManagement>
