--- a/ncts-syndication-client-library/pom.xml
+++ b/ncts-syndication-client-library/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.github.dionmcm</groupId>
 		<artifactId>ncts-syndication-client</artifactId>
-		<version>0.0.4-SNAPSHOT</version>
+		<version>0.0.4</version>
 		<relativePath>..</relativePath>
 	</parent>
 
