--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
 	<profiles>
 		<profile>
 			<id>release</id>
+            <properties>
+                <gpg.executable>gpg</gpg.executable>
+                <gpg.keyname>${env.GPG_KEYNAME}</gpg.keyname>
+                <gpg.passphrase>${env.GPG_PASSPHRASE}</gpg.passphrase>
+                <gpg.defaultKeyring>false</gpg.defaultKeyring>
+                <gpg.publicKeyring>${env.GPG_DIR}/pubring.gpg</gpg.publicKeyring>
+            </properties>
 			<build>
 				<plugins>
 					<plugin>
