--- a/ncts-syndication-client-library/pom.xml
+++ b/ncts-syndication-client-library/pom.xml
@@ -44,6 +44,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.4</version>
 		</dependency>
+		<dependency>
+			<groupId>de.skuzzle</groupId>
+			<artifactId>semantic-version</artifactId>
+			<version>1.1.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
