Added testng tests, including adding mockserver dependency

--- a/ncts-syndication-client-library/pom.xml
+++ b/ncts-syndication-client-library/pom.xml
@@ -44,6 +44,12 @@
 			<artifactId>gson</artifactId>
 			<version>2.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mock-server</groupId>
+			<artifactId>mockserver-netty</artifactId>
+			<version>5.3.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -56,6 +62,24 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			
+			<plugin>
+    <artifactId>maven-clean-plugin</artifactId>
+    <version>3.1.0</version>
+    <configuration>
+      <filesets>
+        <fileset>
+          <directory>src/test/java/com/github/dionmcm/ncts/syndication/client/Test_Client</directory>
+          <includes>
+            <include>*</include>
+          </includes>
+          <followSymlinks>false</followSymlinks>
+        </fileset>
+      </filesets>
+    </configuration>
+  </plugin>
+			
+			
 		</plugins>
 	</build>
 
