rearranged tests to use the target directory as scratch space rather than source, and moved test resources out of test source

--- a/ncts-syndication-client-library/pom.xml
+++ b/ncts-syndication-client-library/pom.xml
@@ -50,6 +50,12 @@
 			<version>5.3.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.8</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -62,24 +68,6 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-			
-			<plugin>
-    <artifactId>maven-clean-plugin</artifactId>
-    <version>3.1.0</version>
-    <configuration>
-      <filesets>
-        <fileset>
-          <directory>src/test/java/com/github/dionmcm/ncts/syndication/client/Test_Client</directory>
-          <includes>
-            <include>*</include>
-          </includes>
-          <followSymlinks>false</followSymlinks>
-        </fileset>
-      </filesets>
-    </configuration>
-  </plugin>
-			
-			
 		</plugins>
 	</build>
 
