--- a/ncts-syndication-client-library/pom.xml
+++ b/ncts-syndication-client-library/pom.xml
@@ -1,18 +1,17 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project 
+	xmlns="http://maven.apache.org/POM/4.0.0" 
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.github.dionmcm</groupId>
+		<groupId>au.gov.digitalhealth</groupId>
 		<artifactId>ncts-syndication-client</artifactId>
 		<version>0.0.6-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
-
 	<artifactId>ncts-syndication-client-library</artifactId>
 	<packaging>jar</packaging>
 	<name>NCTS Syndication Client Java library</name>
 	<description>Java library for downloading artefacts from the NCTS</description>
-
 	<dependencies>
 		<dependency>
 			<groupId>org.jdom</groupId>
@@ -50,7 +49,6 @@
 			<version>1.1.0</version>
 		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
@@ -63,5 +61,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
