--- a/ncts-syndication-client-plugin/pom.xml
+++ b/ncts-syndication-client-plugin/pom.xml
@@ -1,17 +1,17 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project 
+	xmlns="http://maven.apache.org/POM/4.0.0" 
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.github.dionmcm</groupId>
+		<groupId>au.gov.digitalhealth</groupId>
 		<artifactId>ncts-syndication-client</artifactId>
 		<version>0.0.6-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
-
 	<artifactId>ncts-syndication-client-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
 	<name>NCTS Syndication Client Maven Mojo</name>
 	<description>Maven Mojo for downloading content from the National Clinical Terminology Service's syndication feed</description>
-
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.maven</groupId>
@@ -19,7 +19,7 @@
 			<version>3.5.0</version>
 		</dependency>
 		<dependency>
-			<groupId>com.github.dionmcm</groupId>
+			<groupId>au.gov.digitalhealth</groupId>
 			<artifactId>ncts-syndication-client-library</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -30,7 +30,6 @@
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
-
 	<reporting>
 		<plugins>
 			<plugin>
@@ -40,7 +39,6 @@
 			</plugin>
 		</plugins>
 	</reporting>
-
 	<build>
 		<plugins>
 			<plugin>
