refactored pom dependencies and set coverage limit to 80%

--- a/ncts-syndication-client-plugin/pom.xml
+++ b/ncts-syndication-client-plugin/pom.xml
@@ -28,6 +28,16 @@
 			<version>3.5</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.easymock</groupId>
+			<artifactId>easymock</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<reporting>
 		<plugins>
