--- a/pom.xml
+++ b/pom.xml
@@ -53,23 +53,26 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-plugin-plugin</artifactId>
-				<version>3.5</version>
+				<version>3.11.0</version>
 			</plugin>
 		</plugins>
 	</reporting>
+	<prerequisites>
+		<maven>3.6.3</maven>
+	</prerequisites>
 
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>org.easymock</groupId>
 				<artifactId>easymock</artifactId>
-				<version>3.6</version>
+				<version>5.2.0</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.testng</groupId>
 				<artifactId>testng</artifactId>
-				<version>6.8</version>
+				<version>7.9.0</version>
 				<scope>test</scope>
 			</dependency>
 		</dependencies>
@@ -81,7 +84,7 @@
 				<plugin>
 					<groupId>org.jacoco</groupId>
 					<artifactId>jacoco-maven-plugin</artifactId>
-					<version>0.8.1</version>
+					<version>0.8.11</version>
 					<executions>
 						<execution>
 							<goals>
